# scriptorium

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli_main.rs  commands.rs  dl.rs  lib.rs  main.rs  mcp_main.rs  mirror.rs  model.rs  pulse.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/bibtex/: mod.rs
src-tauri/src/citation/: mod.rs
src-tauri/src/connector/: mod.rs
src-tauri/src/db/: citekey.rs  migrations.rs  mod.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/embed/: mod.rs
src-tauri/src/github/: mod.rs
src-tauri/src/import/: mod.rs
src-tauri/src/mathocr/: mod.rs
src-tauri/src/mdexport/: mod.rs
src-tauri/src/metadata/: mod.rs
src-tauri/src/notes/: mod.rs
src-tauri/src/obsidian/: mod.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/pdf/: mod.rs
src-tauri/src/projects/: mod.rs
src-tauri/src/rag/: mod.rs
src-tauri/src/refimport/: mod.rs
src-tauri/src/secret/: mod.rs
src-tauri/src/table/: mod.rs
src-tauri/src/tablestruct/: mod.rs
src-tauri/src/term/: mod.rs
src-tauri/src/watch/: mod.rs
src-tauri/src/wiki/: mod.rs
src/lib/: Archivio.svelte  CitationMap.svelte  CommandPalette.svelte  Constellation.svelte  DetailPanel.svelte  MetaEditor.svelte  MetaFinder.svelte  PdfFinder.svelte  RadialMenu.svelte  SendToNotePicker.svelte  ShareMenu.svelte  Terminal.svelte  TexProjects.svelte  api.ts  latex.ts  math.ts  notecite.ts  palette.ts  print.ts  radial.ts  share.ts
src/lib/viewer/: Viewer.svelte
src/routes/: +page.svelte
src/routes/plancia/: +page.svelte  +page.ts
