[package]
name = "pdfmanage"
version = "0.4.3"
description = "Lean, fast, local-first PDF & reference manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pdfmanage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Hashing (dedupe) & encoding (thumbnails to the frontend) ---
sha2 = "0.10"
base64 = "0.22"

# --- Metadata enrichment (Crossref/OpenAlex over HTTP) ---
# native-tls => Windows SChannel, avoids the cmake/NASM build burden of rustls.
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "native-tls"] }
tokio = { version = "1", features = ["time"] }
regex = "1"

# --- GitHub README rendering: Markdown -> sanitized HTML ---
pulldown-cmark = "0.12"
ammonia = "4"

# --- Table extraction: native .xlsx export ---
rust_xlsxwriter = "0.79"

# --- Secrets: store API keys in the OS credential vault (Windows Credential Manager) ---
keyring = { version = "3", features = ["windows-native"] }

# --- Storage: SQLite (bundled, with FTS5) + sqlite-vec vector search ---
rusqlite = { version = "0.40", features = ["bundled"] }
sqlite-vec = "0.1.9"
zerocopy = { version = "0.8", features = ["derive"] }

# --- PDF parsing & rendering ---
pdfium-render = "0.9"
image = "0.25"

# --- Local embeddings (bge-m3 via ONNX, statically linked) ---
fastembed = "5.17"

# --- Error handling / utilities ---
anyhow = "1"
thiserror = "2"
once_cell = "1"
parking_lot = "0.12"

# --- Watched-folder import ---
notify = "8"

# --- Embedded terminal (PTY for the in-app terminal tab) ---
portable-pty = "0.8"

# --- Browser connector: a tiny loopback HTTP server for the "grab a PDF from
#     the browser" bookmarklet (blocking, no async runtime, few deps) ---
tiny_http = "0.12"

# --- OCR fallback for scanned PDFs: the built-in Windows.Media.Ocr engine
#     (no bundled engine/models; uses the OS OCR language packs). ---
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Security_Cryptography",
    "Storage_Streams",
    "Win32_System_Com",
] }

