[package]
name = "pdfmanage"
version = "0.9.27"
description = "Lean, fast, local-first PDF & reference manager"
authors = ["you"]
edition = "2021"
# Disambiguate the app binary for `tauri build` (there is also a gated CLI bin).
default-run = "pdfmanage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pdfmanage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Gates the headless CLI companion binary. Off by default so `tauri build`
# (the GUI release) never compiles it — build it explicitly with
# `cargo build --release --bin scriptorium-cli --features cli`.
cli = []
# Gates the local MCP server companion binary (same rationale):
# `cargo build --release --bin scriptorium-mcp --features mcp`.
mcp = []

# Headless, read-only terminal access to the library (see src/cli_main.rs).
# Kept OUT of src/bin/ so cargo does not auto-detect it as a second app binary
# (which confuses the tauri bundler). Links only rusqlite + serde_json.
[[bin]]
name = "scriptorium-cli"
path = "src/cli_main.rs"
required-features = ["cli"]

# Local stdio MCP server: read-only tools over the same library for Claude
# Desktop / Claude Code and any MCP client. Same isolation as the CLI.
[[bin]]
name = "scriptorium-mcp"
path = "src/mcp_main.rs"
required-features = ["mcp"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Hashing (dedupe) & encoding (thumbnails to the frontend) ---
sha2 = "0.10"
base64 = "0.22"

# --- Metadata enrichment (Crossref/OpenAlex over HTTP) ---
# native-tls => Windows SChannel, avoids the cmake/NASM build burden of rustls.
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "native-tls"] }
tokio = { version = "1", features = ["time", "sync"] }
regex = "1"

# --- GitHub README rendering: Markdown -> sanitized HTML ---
pulldown-cmark = "0.12"
ammonia = "4"

# --- Math in notes/wiki: LaTeX ($…$ / $$…$$) -> MathML, rendered natively by the
#     webview (no JS/fonts to bundle). Pure Rust; on unsupported input we fall
#     back to the raw LaTeX so nothing is lost. ---
latex2mathml = "0.2"

# --- Table extraction: native .xlsx export ---
rust_xlsxwriter = "0.79"

# --- Secrets: store API keys in the OS credential vault (Windows Credential Manager) ---
keyring = { version = "3", features = ["windows-native"] }

# --- Storage: SQLite (bundled, with FTS5) + sqlite-vec vector search ---
rusqlite = { version = "0.40", features = ["bundled"] }
sqlite-vec = "0.1.9"
zerocopy = { version = "0.8", features = ["derive"] }

# --- PDF parsing & rendering ---
pdfium-render = "0.9"
image = "0.25"

# --- Local embeddings (bge-m3 via ONNX, statically linked) ---
fastembed = "5.17"

# --- Formula OCR (pix2tex / LaTeX-OCR, ONNX): an image of an equation -> LaTeX.
#     Reuses the ONNX Runtime already statically linked via fastembed; the `ort`
#     feature set below is a subset of what fastembed already enables, so the
#     resolved runtime build is unchanged (no extra DLL, no second download).
#     The ~180 MB models are fetched on first use into app_data/mathocr, not
#     bundled, so the installer stays lean (same pattern as bge-m3). ---
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-native", "ndarray"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
ndarray = "0.17"

# --- Error handling / utilities ---
anyhow = "1"
thiserror = "2"
once_cell = "1"
parking_lot = "0.12"

# --- Watched-folder import ---
notify = "8"

# --- LaTeX project (.zip) intake: read the compiled PDF + .bib bibliography.
#     deflate-only (miniz_oxide, pure Rust) avoids the bzip2/zstd C build burden. ---
zip = { version = "2", default-features = false, features = ["deflate"] }

# --- Embedded terminal (PTY for the in-app terminal tab) ---
portable-pty = "0.8"

# --- Browser connector: a tiny loopback HTTP server for the "grab a PDF from
#     the browser" bookmarklet (blocking, no async runtime, few deps) ---
tiny_http = "0.12"

# --- OCR fallback for scanned PDFs: the built-in Windows.Media.Ocr engine
#     (no bundled engine/models; uses the OS OCR language packs). ---
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Security_Cryptography",
    "Storage_Streams",
    "Win32_System_Com",
] }

